# TilesEditor

./: .gitattributes  .gitignore  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AbstractFileSystem.h  AbstractLevelEntity.cpp  AbstractLevelEntity.h  AbstractSelection.cpp  AbstractSelection.h  AbstractSpatialGridItem.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  CustomPaintWidget.h  DarkTitleBar.h  EditAnonymousNPC.cpp  EditAnonymousNPC.h  EditAnonymousNPC.ui  EditBaddy.cpp  EditBaddy.h  EditBaddy.ui  EditChestDialog.cpp  EditChestDialog.h  EditChestDialog.ui  EditExternalNPC.cpp  EditExternalNPC.h  EditExternalNPC.ui  EditLinkDialog.cpp  EditLinkDialog.h  EditLinkDialog.ui  EditSignsDialog.cpp  EditSignsDialog.h  EditSignsDialog.ui  EditTilesetDialog.cpp  EditTilesetDialog.h  EditTilesetDialog.ui  EditorTabWidget.cpp  EditorTabWidget.h  EditorTabWidget.ui  (+106 more)
Forms/: AboutDialog.ui  EditAnonymousNPC.ui  EditBaddy.ui  EditChestDialog.ui  EditExternalNPC.ui  EditLinkDialog.ui  EditScriptForm.ui  EditSignsDialog.ui  EditTileDefs.ui  EditTilesetDialog.ui  EditTilesets.ui  EditorObject.ui  EditorTabWidget.ui  FixMapNamesDialog.ui  LevelConverter.ui  ListLinksDialog.ui  MainWindow.ui  NewCustomTheme.ui  NewLevelDialog.ui  NewOverworldDialog.ui  ObjectsWidget.ui  ScreenshotDialog.ui  TileObjectsWidget.ui  TilesetsWidget.ui
Forms/AniEditor/: AniEditor.ui  AniEditorAddSprite.ui  AniEditorWindow.ui
QCodeEditor/src/Design/: QCodeEditorDesign.cpp  QSyntaxRule.cpp  XmlHelper.cpp
QCodeEditor/src/Widgets/: QCodeEditor.cpp  QCodeEditorEvents.cpp
Resources/: MainWindow.qrc  TilesEditor.aps  rule_cpp.xml
Resources/QSS-master/: Aqua.qss  QSS.qrc
Resources/icons/: import-images.pdn
Resources/otherStyleSheets/: DarkOrangeStyle.qrc  darkorange.qss
Resources/qdarkstyle/dark/: darkstyle.qss
Resources/qdarkstyle/light/: lightstyle.qss
cJSON/: JsonHelper.h  cJSON.c  cJSON.h
cmake/mingw64/: CMakeLists.txt
gs1/: GS1Converter.cpp  GS1Converter.h
gs1/include/gs1/parse/: SyntaxTree.hpp  SyntaxTreeVisitor.hpp
gs1/src/gs1common/: Log.cpp
gs1/src/gs1parse/: Lexer.cpp  Parser.cpp
src/: AboutDialog.cpp  AbstractExternalNPCParamRow.h  AbstractLevelEntity.cpp  AbstractLevelEntity.h  AbstractLevelFormat.cpp  AbstractLevelFormat.h  AbstractResourceManager.cpp  AbstractResourceManager.h  AbstractScriptableDialog.cpp  AbstractScriptableDialog.h  AbstractSelection.cpp  AbstractSelection.h  AbstractSpatialGridItem.h  AbstractTheme.h  CustomListWidgetItem.h  CustomPaintWidget.cpp  DarkOrangeTheme.h  DarkStyleTheme.h  DialogFeatures.h  EditAnonymousNPC.cpp  EditAnonymousNPC.h  EditBaddy.cpp  EditBaddy.h  EditChestDialog.cpp  EditExternalNPC.cpp  EditExternalNPC.h  EditLinkDialog.cpp  EditLinkDialog.h  EditScriptForm.cpp  EditScriptForm.h  EditSignsDialog.cpp  EditSignsDialog.h  EditTileDefs.cpp  EditTileDefs.h  EditTilesetDialog.cpp  EditTilesetDialog.h  EditTilesets.cpp  EditTilesets.h  EditorObject.cpp  EditorObject.h  (+105 more)
src/AniEditor/: Ani.cpp  Ani.h  AniCommands.h  AniEditor.cpp  AniEditor.h  AniEditorAddSprite.cpp  AniEditorAddSprite.h  AniEditorWindow.cpp  AniEditorWindow.h  AniInstance.cpp  AniInstance.h  IAniEditor.h  IAniInstance.h
src/QCodeEditor/include/internal/: QFramedTextAttribute.hpp
src/QCodeEditor/resources/: qcodeeditor_resources.qrc
src/QCodeEditor/resources/languages/: cpp.xml
src/QCodeEditor/src/internal/: QCodeEditor.cpp  QFramedTextAttribute.cpp
src/cJSON/: cJSON.c
src/gs1/: GS1Converter.cpp  GS1Converter.h  GS1Prototypes.h
src/gs1/include/gs1/common/: PackedValue.hpp  Util.hpp
src/gs1/include/gs1/parse/: Diag.hpp  Parser.hpp  SyntaxTree.hpp  SyntaxTreeVisitor.hpp  Token.hpp
src/gs1/src/gs1parse/: Diag.cpp  Lexer.cpp  Parser.cpp  Token.cpp
src/sgscript/: sgs_bcg.c  sgs_ctx.c  sgs_fnt.c  sgs_int.h  sgs_proc.c  sgs_srlz.c  sgs_std.c  sgs_tok.c  sgs_util.c  sgs_util.h  sgs_xpc.c  sgscript.h
src/sgscript/ext/: sgs_prof.c  sgs_prof.h  sgsjson.cpp  sgsjson.h
